--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -22,7 +22,13 @@
 						<View id="innerWrapper">
 							<View id="date_rating">
 								<Label id = "date" text="{Post.referenceTime}"/>
-								<Label id = "rating" text ="*****"/>
+								<View id = "ratingContainer">
+									<ImageView id="rating_1" class="ratingstars" image="{Post.rating_1}"/>
+									<ImageView id="rating_2" class="ratingstars" image="{Post.rating_2}"/>
+									<ImageView id="rating_3" class="ratingstars" image="{Post.rating_3}"/>
+									<ImageView id="rating_4" class="ratingstars" image="{Post.rating_4}"/>
+									<ImageView id="rating_5" class="ratingstars" image="{Post.rating_5}"/>
+								</View>
 							</View>
 							<Label id = "name" text="{Post.name}"/>
 						</View>
@@ -35,7 +41,7 @@
 						</View>
 						<View class="post_icons_container">
 							<Label class="post_icon" id="tag_icon"/>
-							<Label class="btn_text" id="tags" text="tags"/>
+							<Label class="btn_text" id="tags" text="{Post.tag}"/>
 						</View>
 						<View class="post_icons_container">
 							<Label class="post_icon" id="stories_icon"/>
