--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -1,7 +1,7 @@
 <Alloy>
 
 	<!--<Collection src = "events" id="subsetEvents" instance="true"/>-->
-	<Window id="win" class="container" title = "Diario" onOpen="openEvent">
+	<Window id="win" class="container" title = "Diario" onOpen="openEvent" exitOnClose="true">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
@@ -11,7 +11,7 @@
 			<MenuItem id="mn_search" title="Immagine" onClick="refreshTable"/>
 			<!--<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />-->
 		</Menu>
-		<TableView id = "timelineTable"  dataCollection="Timeline" dataFunction="syncTimeline" dataTransform="transformData">
+		<TableView id = "timelineTable" onPostlayout="closeSpinner" dataCollection="Timeline" dataFunction="syncTimeline" dataTransform="transformData">
 
 			<TableViewRow class="row" onClick = "mostraDettaglioEvento">
 
@@ -23,7 +23,13 @@
 						<View id="innerWrapper">
 							<View id="date_rating">
 								<Label id = "date" text ="{postDate}"/>
-								<Label id = "rating" text ="********"/>
+								<View id = "ratingContainer">
+									<ImageView id="rating_1" class="ratingstars" image="{rating_1}"/>
+									<ImageView id="rating_2" class="ratingstars" image="{rating_2}"/>
+									<ImageView id="rating_3" class="ratingstars" image="{rating_3}"/>
+									<ImageView id="rating_4" class="ratingstars" image="{rating_4}"/>
+									<ImageView id="rating_5" class="ratingstars" image="{rating_5}"/>
+								</View>
 							</View>
 							<Label id = "name" text ="{name}"/>
 
@@ -49,7 +55,7 @@
 						</View>
 						<View class="post_icons_container">
 							<Label class="post_icon" id="tag_icon"/>
-							<Label class="btn_text" id="tags" text="tags"/>
+							<Label class="btn_text" id="tags" text="{tag}"/>
 						</View>
 						<View class="post_icons_container">
 							<Label class="post_icon" id="stories_icon"/>
@@ -59,14 +65,11 @@
 					</View>
 					<View class="separator"/>
 					<View id="bottomWrapper">
-						<Label class="aspects_icons first" id="event_icon"/>
+						<Label class="aspects_icons first" id="event_icon" backgroundImage="{iconEvent}"/>
 						<Label class="aspects_icons" id="cashflow_icon" backgroundImage="{iconCashFlow}"/>
 						<Label class="aspects_icons" id="document_icon" backgroundImage="{iconDocument}"/>
-						/>
 						<Label class="aspects_icons" id="note_icon" backgroundImage="{iconNote}"/>
-						/>
 						<Label class="aspects_icons" id="link_icon" backgroundImage="{iconLink}"/>
-						/>
 						<Label class="aspects_icons" id="communication_icon"/>
 						<!--<Label id = "aspects" text="{aspects}"/>-->
 						<View class="show_all_container">
