aggiunto cashflow nel dettaglio post

--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -70,7 +70,7 @@
 						<Label class="aspects_icons" id="document_icon" backgroundImage="{iconDocument}"/>
 						<Label class="aspects_icons" id="note_icon" backgroundImage="{iconNote}"/>
 						<Label class="aspects_icons" id="link_icon" backgroundImage="{iconLink}"/>
-						<Label class="aspects_icons" id="communication_icon"/>
+						<Label class="aspects_icons" id="communication_icon" backgroundImage="{iconCommunication}"/>
 						<!--<Label id = "aspects" text="{aspects}"/>-->
 						<View class="show_all_container">
 
