--- a/app/views/briefCashflow.xml
+++ b/app/views/briefCashflow.xml
@@ -1,13 +1,21 @@
 <Alloy>
 
 	<View class="aspectContainer">
-		<View class="separator"/>
+
+		<Label class="separator"/>
 		<Label id="cashFlowIcon" class="aspectIcon"/>
-		<View class="dataWrapper">
-			<Label class="dataDisplay first" id="importo" text="{Aspetto.importo}"/>
-			<Label class="dataDisplay" id="tipoMovimento" text="{Aspetto.tipoMovimento}"/>
-			<Label class="dataDisplay" id="modalitaPagamento" text="{Aspetto.modalitaPagamento}"/>
-		</View>
+		<TableView id="aspectTable" dataCollection="aspettiCashflow"  dataFunction="syncAspects" dataTransform="transformData">
+
+			<TableViewRow class="row">
+				<View class="dataWrapper">
+					<Label class="dataDisplay first" id="importo" text="{importo}"/>
+					<Label class="dataDisplay" id="tipoMovimento" text="{tipoMovimento}"/>
+					<Label class="dataDisplay" id="modalitaPagamento" text="{modalitaPagamento}"/>
+				</View>
+			</TableViewRow>
+
+		</TableView>
+
 	</View>
 
 </Alloy>
