--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -1,13 +1,12 @@
 <Alloy>
 
-	<Window id="win" title="Post" class="container">
+	<Window id="win" title="Dettaglio Post" class="container" onOpen="openEvent">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
 
 			<!-- Cannot specify node text.  Use attributes only. -->
-			<MenuItem id="mn_notify" title="Scrivi"/>
-			<MenuItem id="mn_search" title="Immagine"/>
+			<MenuItem id="mn_edit" title="Modifica" onClick="editPost"/>
 			<!--<MenuItem id="Foto" title="Foto" icon="/images/86-camera.png"  showAsAction="Ti.Android.SHOW_AS_ACTION_IF_ROOM" />-->
 		</Menu>
 		<ScrollView id="postTable">
