--- a/app/views/addCashflow.xml
+++ b/app/views/addCashflow.xml
@@ -49,12 +49,12 @@
 
 				<View class="rowWrapper">
 
-					<View id="leftSubWrapper">
+					<View id="leftSubWrapper" onClick="setOrdinario">
 						<ImageView id="dotSwitchImageLeft"/>
 						<Label id="ordinarioLabel"/>
 					</View>
 					<Label class="verticalBar"/>
-					<View id="rightSubWrapper">
+					<View id="rightSubWrapper" onClick="setStraordinario">
 						<ImageView id="dotSwitchImageRight"/>
 						<Label id="straordinarioLabel"/>
 					</View>
@@ -63,15 +63,53 @@
 			</TableViewRow>
 			<TableViewRow class="row">
 
+				<View class="rowWrapper" onClick="toggleRedditi">
+
+					<View id="leftSubWrapper">
+
+						<Label id="dichRedditiLabel"/>
+					</View>
+					<View id="ovalSwitchContainer">
+						<ImageView id="ovalSwitchRedditi"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
 				<View class="rowWrapper">
 
 					<View id="leftSubWrapper">
-						
-						<Label id="dichRedditiLabel"/>
+						<Label id="dataValutaLabel"/>
 					</View>
-					
-					<View id="ovalSwitchContainer">
-						<ImageView id="ovalSwitchRedditi"/>						
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="dataValuta" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="dataScadenzaLabel"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="dataScadenza" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="dataPagamentoLabel"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="dataPagamento" dataRaw="" onClick="showDatePicker"/>
 					</View>
 
 				</View>
