--- a/app/views/rowDetailDOCUMENT.xml
+++ b/app/views/rowDetailDOCUMENT.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<Window id="win" title="Dettaglio Documento" class="container" onOpen="openEvent">
+	<Window id="win" title="Documento" class="container" onOpen="openEvent">
 
 		<!-- The Menu tag adds the Android menu. -->
 		<Menu id="menu" platform="android">
@@ -12,60 +12,32 @@
 			<View class="eventContainer">
 				<ImageView id="img_preview"/>
 				<View class="rowWrapper">
-					<Label id = "titoloLabel"/>
-					<Label id = "titolo"/>
+					<Label id = "titoloLabel" class = "label">Titolo:</Label>
+					<Label id = "titolo" class = "value"/>
 				</View>
 				<View class="rowWrapper">
-					<Label id = "nomeFileLabel"/>
+					<Label id = "nomeFileLabel" class = "label">Nome File:</Label>
 					<Label id = "nomeFile"/>
 				</View>
 				<View class="rowWrapper newline">
-					<Label id = "tipologiaLabel"/>
-					<Label id = "tipologia"/>
+					<Label id = "tipologiaLabel" class = "label">Tipologia:</Label>
+					<Label id = "tipologia" class = "value"/>
 				</View>
 				<View class="rowWrapper">
-					<Label id = "formatoLabel"/>
-					<Label id = "formato"/>
+					<Label id = "formatoLabel" class = "label">Formato:</Label>
+					<Label id = "formato" class = "value"/>
 				</View>
 				<View class="rowWrapper">
-					<Label id = "filesizeLabel"/>
-					<Label id = "filesize"/>
+					<Label id = "filesizeLabel" class = "label">File Size:</Label>
+					<Label id = "filesize" class = "value"/>
 				</View>
-				<View class="rowWrapper newline bottom">
-					<Label id = "dataDocLabel"/>
-					<Label id = "dataDoc"/>
+				<View class="rowWrapper newline last">
+					<Label id = "dataDocLabel" class = "label">Data Documento:</Label>
+					<Label id = "dataDoc" class = "value"/>
 				</View>
 
 			</View>
 		</ScrollView>
 
-		<!--<TableViewRow id="row">
-		<Label id="description"/>
-		<Label id="category"/>
-		<View class="block_container">
-		<Label class="block_label" text=" Formato">
-		<Label class="block_data" id="format"/>
-		</View>
-		<View class="block_container">
-		<Label class="block_label" text=" Tipo">
-		<Label class="block_data" id="type"/>
-		</View>
-		<View class="block_container">
-		<Label class="block_label" text=" Nome">
-		<Label class="block_data" id="name"/>
-		</View>
-		<View class="block_container">
-		<Label class="block_label" text=" Dimensioni">
-		<Label class="block_data" id="size"/>
-		</View>
-		<View class="block_container">
-		<Label class="block_label" text=" Timestamp">
-		<Label class="block_data" id="timestamp"/>
-		</View>
-		<View class="block_container">
-		<Label class="block_label" text=" Preview">
-		<ImageView id="img_preview"/>
-		</View>
-		</TableViewRow>-->
 	</Window>
 </Alloy>
