--- a/app/views/addEvent.xml
+++ b/app/views/addEvent.xml
@@ -1,4 +1,4 @@
-<Alloy>
+<!--<Alloy>
 	<Window id="window" class="container" title = "Nuovo Evento">
 		<Menu id="menu" platform="android">
 			
@@ -19,6 +19,158 @@
 			<TableViewRow class="row" leftImage="/images/location.png" onClick = "getLocation">
 				<Label id="location"/>
 			</TableViewRow>
+
+		</TableView>
+
+	</Window>
+</Alloy>-->
+
+<Alloy>
+	<Window id="win" class="container" title = "Nuovo Evento" onOpen="openEvent">
+
+		<Menu id="menu" platform="android">
+
+			<MenuItem id="mn_salva" onClick="saveEvent"/>
+
+		</Menu>
+		<TableView id="newEventTable">
+
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="labelInizioEvento"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="pkrDataInizioEvento" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="labelFineEvento"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="pkrDataFineEvento" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+					<ImageView id="addPeopleImage"/>					
+					<TextField id="addPeople"/>
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row" onClick = "getLocation">
+				<View class="rowWrapper">
+					<ImageView id="locationImage"/>					
+					<TextField id="location"/>
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+
+				<View class="rowWrapper" onClick="toggleScadStrutt">
+
+					<View id="leftSubWrapper">
+
+						<Label id="scadenzaStrutturaleLabel"/>
+					</View>
+					<View id="ovalSwitchContainer">
+						<ImageView id="ovalSwitchScadStrutt"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<!--<TableViewRow class="row">
+				<View class="rowWrapper">
+					<Label id="statoMovimento"/>
+					<Label class="verticalBar"/>
+					<Picker id="pkrStatoMovimento" selectionIndicator="true"/>
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+					<Label id="variabilita"/>
+					<Label class="verticalBar"/>
+					<Picker id="pkrVariabilita" selectionIndicator="true"/>
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper" onClick="setOrdinario">
+						<ImageView id="dotSwitchImageLeft"/>
+						<Label id="ordinarioLabel"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper" onClick="setStraordinario">
+						<ImageView id="dotSwitchImageRight"/>
+						<Label id="straordinarioLabel"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+
+				<View class="rowWrapper" onClick="toggleRedditi">
+
+					<View id="leftSubWrapper">
+
+						<Label id="dichRedditiLabel"/>
+					</View>
+					<View id="ovalSwitchContainer">
+						<ImageView id="ovalSwitchRedditi"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="dataValutaLabel"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="dataValuta" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="dataScadenzaLabel"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="dataScadenza" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>
+			<TableViewRow class="row">
+				<View class="rowWrapper">
+
+					<View id="leftSubWrapper">
+						<Label id="dataPagamentoLabel"/>
+					</View>
+					<Label class="verticalBar"/>
+					<View id="rightSubWrapper">
+						<Label id="dataPagamento" dataRaw="" onClick="showDatePicker"/>
+					</View>
+
+				</View>
+			</TableViewRow>-->
 
 		</TableView>
 
