--- a/app/views/dettaglio_post.xml
+++ b/app/views/dettaglio_post.xml
@@ -47,6 +47,7 @@
 					</View>
 
 				</View>
+				<View id="aspectsEventsWrapper"></View>
 				<View id="aspectsCashflowWrapper"></View>
 				<View id="aspectsDocumentWrapper"></View>
 
