--- a/app/views/rowEvent.xml
+++ b/app/views/rowEvent.xml
@@ -1,17 +1,3 @@
-<!--<Alloy>
-	<TableViewRow id="row">
-		
-		<View class="block_container" layout="horizontal">
-			<Label id="description"/>
-			<Label class="block_data" id="dateFrom"/>
-			<Label class="block_data" id="dateTo"/>
-		</View>
-		<View class="block_container" layout="horizontal">
-			<Label class="block_data" id="location"/>			
-		</View>
-	</TableViewRow>
-</Alloy>-->
-
 <Alloy>
 
 	<TableViewRow class="row">
@@ -22,7 +8,10 @@
 				<View class="dataWrapper">
 					<Label class="dataDisplay first" id="startDate"/>
 					<Label class="dataDisplay" id="endDate"/>
-					<Label class="dataDisplay" id="location"/>
+
+				</View>
+				<View class="dataWrapper">
+					<Label class="locationDisplay" id="location"/>
 				</View>
 			</View>
 
