--- a/app/views/timeline_win.xml
+++ b/app/views/timeline_win.xml
@@ -19,7 +19,7 @@
 
 					<View id="topWrapper">
 
-						<ImageView id="postIcon"/>
+						<ImageView id="postIcon" image="{catImage}"/>
 						<View id="innerWrapper">
 							<View id="date_rating">
 								<Label id = "date" text ="{postDate}"/>
