--- a/platform/android/res/values/style.xml
+++ b/platform/android/res/values/style.xml
@@ -1,12 +1,19 @@
-<resources xmlns:android="http://schemas.android.com/apk/res/android">  
-   <style name="Theme.ZiriZiriTheme" parent="android:style/Theme.Holo.Light">
-         <item name="android:actionBarStyle">@style/Theme.ZiriZiriTheme.ActionBar</item>
-   </style>         
-   <style name="Theme.ZiriZiriTheme.ActionBar" parent="android:style/Widget.Holo.Light.ActionBar">
-        <!--<item name="android:background">#256cbc</item>-->
-         <item name="android:titleTextStyle">@style/Theme.ZiriZiriTheme.ActionBar.TitleTextStyle</item>
-    </style>        
-   <style name="Theme.ZiriZiriTheme.ActionBar.TitleTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
-        <item name="android:textColor">#5FAEE3</item>
-    </style>           
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+	<style name="Theme.ZiriZiriTheme" parent="android:style/Theme.Holo.Light">
+		<item name="android:actionBarStyle">@style/Theme.ZiriZiriTheme.ActionBar</item>
+		<item name="android:actionOverflowButtonStyle">@style/Theme.ZiriZiriTheme.OverFlow</item>
+	</style>
+	<style name="Theme.ZiriZiriTheme.ActionBar" parent="android:style/Widget.Holo.Light.ActionBar">
+		<!--<item name="android:background">#256cbc</item>-->
+		<item name="android:titleTextStyle">@style/Theme.ZiriZiriTheme.ActionBar.TitleTextStyle</item>
+	</style>
+	<style name="Theme.ZiriZiriTheme.ActionBar.TitleTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+		<item name="android:textColor">#5FAEE3</item>
+	</style>
+	
+	
+	<style name="Theme.ZiriZiriTheme.OverFlow">
+		<item name="android:src">@drawable/z_overflow</item>
+	</style>
+
 </resources>
